--- a/src/views/pages/header.html
+++ b/src/views/pages/header.html
@@ -3,4 +3,5 @@
   <p>Model - View - Controller</p>
   <a class="btn btn-light" href="{{URL}}">HOME</a>
   <a class="btn btn-light" href="{{URL}}/sobre">Sobre</a>
+  <a class="btn btn-light" href="{{URL}}/depoimentos">Depoimentos</a>
 </div>
