--- a/src/views/pages/header.html
+++ b/src/views/pages/header.html
@@ -4,4 +4,5 @@
   <a class="btn btn-light" href="{{URL}}">HOME</a>
   <a class="btn btn-light" href="{{URL}}/sobre">Sobre</a>
   <a class="btn btn-light" href="{{URL}}/depoimentos">Depoimentos</a>
+  <a class="btn btn-light" href="{{URL}}/qrcode">qrcode</a>
 </div>
