--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,9 +1,44 @@
-#root{
-
-}
-
-
 body{
-    background-color: black;
-    color: white;
+    display: grid;
+    grid-template-columns: 200px 1fr;
+    grid-template-rows: 64px 1fr 64px;
+    grid-template-areas:
+            "header header"
+            "sidebar content"
+            "sidebar footer";
+    height: 100vh;
+    margin: 0;
+    background-color: #dddddd;
+}
+body.hide-sidebar{
+    grid-template-columns: 1fr;
+    grid-template-areas:
+        "header"
+        "content"
+        "footer";
+}
+header.header {
+    grid-area: header;
+}
+header.header nav.menu{
+    background-color: #0c1928;
+    height: 100%;
+}
+#menu{
+    height: 100%;
+}
+aside.sidebar {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    grid-area: sidebar;
+    box-shadow: -5px 0px 25px 1px rgba(0,0,0,.4);
+    background-color: #121d2f;
+}
+main.content {
+    grid-area: content;
+}
+main.content table{
+    color: #0c1928;
+    width: 100%;
 }
