--- a/src/views/admin/login.html
+++ b/src/views/admin/login.html
@@ -6,13 +6,13 @@
         <div class="card-body">
             {{status}}
             <form action="" method="post">
-                <div class="form-droup">
-                    <label for="">E-mail</label>
-                    <input type="email" class="form-control" name="email" placeholder="email@teste.com" required autofocus>
+                <div class="form-group">
+                    <label for="email">E-mail</label>
+                    <input type="email" class="form-control" name="email" id="email" placeholder="email@teste.com" required>
                 </div>
-                <div class="form-droup my-3">
-                    <label for="">Senha</label>
-                    <input type="password" class="form-control" name="senha" placeholder="********" required>
+                <div class="form-group my-3">
+                    <label for="senha">Senha</label>
+                    <input type="password" class="form-control" name="senha" id="senha" placeholder="********" required>
                 </div>
                 <button type="submit" class="btn btn-danger">Entrar</button>
             </form>
