--- a/src/views/admin/modules/users/index.html
+++ b/src/views/admin/modules/users/index.html
@@ -1,8 +1,8 @@
-<h1>Depoimentos</h1>
-<p>Depoimentos enviados pelos usuários</p>
+<h1>Usuários</h1>
+<p>Usuários com acesso ao painel</p>
 
 <hr>
-<a href="{{URL}}/admin/testimonies/new" class="btn btn-success">Cadastrar depoimento</a>
+<a href="{{URL}}/admin/user/new" class="btn btn-success">Cadastrar usuário</a>
 <hr>
 
 {{status}}
@@ -12,8 +12,7 @@
     <tr class="text-center">
       <th style="width: 50px">ID</th>
       <th style="width: 200px">Nome</th>
-      <th>Texto</th>
-      <th>Data</th>
+      <th>Email</th>
       <th style="width: 200px">Ações</th>
     </tr>
   </thead>
