--- a/src/views/admin/panel.html
+++ b/src/views/admin/panel.html
@@ -1,18 +1,21 @@
-<header class="header">
-    <section id="menu">
-        {{menu}}
-    </section>
-</header>
-<aside class="sidebar">
-    <div id="vertical" class="sidebar">
-        {{vertical}}
-    </div>
-</aside>
-<main class="content">
-    <section id="modulo">
-        <div class="container pt-3">
-            {{content}}
+<div class="body">
+    <header class="header">
+        <section id="menu">
+            {{menu}}
+        </section>
+    </header>
+    <aside class="sidebar">
+        <div id="vertical" class="sidebar">
+            {{vertical}}
         </div>
-    </section>
-</main>
+    </aside>
+    <main class="content">
+        <section id="modulo">
+            <div class="container pt-3">
+                {{content}}
+            </div>
+        </section>
+    </main>
+</div>
+
 
