--- a/src/views/pages/qrcode.html
+++ b/src/views/pages/qrcode.html
@@ -1,17 +1,8 @@
 <h1>Gerar QrCode</h1>
 <hr>
-
-<section id="testimonies">
-    {{name}}
-
-</section>
-<hr>
 <div class="row">
     <div class="col-6">
         <sectiom id="form">
-            <h3>
-                Gere seu QrCode
-            </h3>
             <form method="post">
                 <div class="form-group row">
                     <div class="col-12">
@@ -28,12 +19,12 @@
                         </select>
                     </div>
                     <div class="col-6 mt-2">
-                        <label for="qualidade">Qualidade</label>
-                        <select name="qualidade" id="qualidade" class="form-control">
-                            <option value="L">Low</option>
-                            <option value="M">Medium</option>
-                            <option value="Q">High</option>
-                        </select>
+<!--                        <label for="qualidade">Qualidade</label>-->
+<!--                        <select name="qualidade" id="qualidade" class="form-control">-->
+<!--                            <option value="L">Low</option>-->
+<!--                            <option value="M">Medium</option>-->
+<!--                            <option value="Q">High</option>-->
+<!--                        </select>-->
                     </div>
                     <div class="col-2 mt-3">
                         <button type="submit" class="btn btn-outline-success form-control" name="enviar" id="enviar">
