--- a/src/views/admin/login.html
+++ b/src/views/admin/login.html
@@ -1,5 +1,5 @@
-<div class="d-flex justify-content-center">
-    <div class="card mt-3 text-dark text-center" style="width: 400px">
+<div class="d-flex justify-content-center login">
+    <div class="card mt-3 text-dark text-center" style="width: 400px; height: 400px;">
         <div class="card-header">
             <h1>Login</h1>
         </div>
