--- a/src/views/admin/modules/testimonies/item.html
+++ b/src/views/admin/modules/testimonies/item.html
@@ -3,5 +3,8 @@
   <td style="text-align: center">{{nome}}</td>
   <td style="padding:2%">{{texto}}</td>
   <td style="text-align: center">{{data}}</td>
-  <td></td>
+  <td>
+    <a href="{{URL}}/admin/testimonies/{{id}}/edit" class="btn btn-outline-primary" >Editar</a>
+    <a href="{{URL}}/admin/testimonies/{{id}}/delete" class="btn btn-outline-danger" >Excluir</a>
+  </td>
 </tr>
